# ai_learning_lesson

./: README.md  pyproject.toml
lessons/01_basic_llm/: 01_simple_chat.py  02_streaming_chat.py  03_thinking_model.py
lessons/02_prompt_engineering/: 01_prompt_templates.py  02_few_shot_prompts.py  03_chain_of_thought.py
lessons/03_chains/: 01_simple_chain.py  02_sequential_chain.py  03_output_parsers.py
lessons/04_tools/: 01_basic_tools.py  02_local_commands.py  03_file_operations.py
lessons/05_agents/: 01_react_agent.py  02_tool_calling_agent.py  03_multi_tool_agent.py
lessons/06_rag/: 01_simple_rag.py  02_vector_store_rag.py  03_conversational_rag.py  04_milvus_rag.py  05_milvus_advanced_rag.py  06_faiss_rag.py  07_milvus_vector_store_rag.py  08_milvus_conversational_rag.py  09_milvus_production_rag.py
